--- a/assets/css/blocks/_site-main.scss
+++ b/assets/css/blocks/_site-main.scss
@@ -4,4 +4,6 @@
     padding-block: 2rem;
     margin: 0 auto;
     padding-inline: 1.5rem;
+    min-width: 0;
+    max-width: 100%;
 }
